# atvc

./: CMakeLists.txt  OAT.xml  README.md  Third_Party_Open_Source_Software_List.yaml  build.sh  classify_rule.yaml  version.info
cmake/: intf_pub_linux.cmake  makeself.cmake  package.cmake  variables.cmake
cmake/modules/: Finddlog.cmake
docs/: 01_quick_start.md  02_developer_guide.md
examples/: README.md  run_examples.sh
examples/add/: README.md  add.cpp
examples/add_with_broadcast/: README.md  add_with_broadcast.cpp  add_with_broadcast.h
examples/add_with_scalar/: README.md  add_with_scalar.cpp
examples/addcmul/: README.md  addcmul.cpp  addcmul.h  post_compute_add_of_broadcast.h  pre_compute_mul_of_broadcast.h
examples/broadcast_to/: README.md  broadcast_to.cpp
examples/common/: example_common.h
examples/edge/: README.md  edge.cpp
examples/ops_aclnn/: README.md
examples/ops_aclnn/add/: AddCustom.json  README.md  install.sh
examples/ops_aclnn/add/AclNNInvocationNaive/: CMakeLists.txt  README.md  main.cpp  run.sh
examples/ops_aclnn/add/AddCustom/cmake/: func.cmake
examples/ops_aclnn/add/AddCustom/op_host/: CMakeLists.txt  add_custom.cpp
examples/ops_aclnn/add/AddCustom/op_kernel/: CMakeLists.txt  add_custom.cpp
examples/ops_aclnn/reduce_sum/: README.md  ReduceSumCustom.json  install.sh
examples/ops_aclnn/reduce_sum/AclNNInvocationNaive/: CMakeLists.txt  README.md  main.cpp  run.sh
examples/ops_aclnn/reduce_sum/ReduceSumCustom/: CMakeLists.txt
examples/ops_aclnn/reduce_sum/ReduceSumCustom/cmake/: intf.cmake
examples/ops_aclnn/reduce_sum/ReduceSumCustom/op_host/: CMakeLists.txt  reduce_sum_custom.cpp
examples/ops_aclnn/reduce_sum/ReduceSumCustom/op_kernel/: CMakeLists.txt  reduce_sum_custom.cpp
examples/ops_pytorch/: README.md
examples/ops_pytorch/add/: README.md  add_custom_impl.h  pytorch_ascendc_extension.cpp  run_op.py
examples/ops_pytorch/reduce_sum/: README.md  pytorch_ascendc_extension.cpp  reduce_sum_impl.h  run.sh  run_op.py
examples/reduce_sum/: README.md  reduce_sum.cpp
examples/relu_with_reduce_sum/: README.md  post_compute_relu_with_reduce_sum.h  pre_compute_add_with_reduce_sum.h  relu_with_reduce_sum.cpp  relu_with_reduce_sum.h
examples/sinh_custom/: README.md  sinh_custom.cpp
examples/tanh_grad/: README.md  tanh_grad.cpp
include/: atvc.h
include/broadcast/common/: broadcast_common.h  patterns.h
include/broadcast/host/: broadcast_host.h
include/broadcast/host/tiling/: broadcast_tiling.h
include/broadcast/kernel/: broadcast_compute.h  broadcast_kernel.h  broadcast_op_template.h
include/broadcast/kernel/utils/: broadcast_buf_pool.h  broadcast_util.h
include/common/: atvc_op_check.h  atvc_opdef.h  compile_info.h  const_def.h  dtype_utils.h  forward.h  index_seq.h  kernel_check_debug.h  kernel_utils.h  ops_utils_device.h  ops_utils_host.h  platform.h  tensor_info.h  tuple.h  type_list.h
include/elewise/common/: elewise_common.h
include/elewise/host/: elewise_host.h
include/elewise/kernel/: elewise_kernel.h  elewise_op_template.h
include/elewise/kernel/utils/: elewise_util.h
include/pool/common/: pool_common.h
include/pool/host/: pool_host.h
include/pool/kernel/: pool_kernel.h  pool_op_template.h
include/pool/kernel/pool_utils/: pool_util.h
include/reduce/common/: patterns.h  reduce_common.h
include/reduce/host/: reduce_host.h
include/reduce/host/tiling/: reduce_tiling.h  tiling_common.h
include/reduce/kernel/: reduce_kernel.h  reduce_op_template.h  reduce_sum_compute.h
include/reduce/kernel/utils/: reduce_block_aux.h  reduce_block_aux_util.h  reduce_buf_pool.h  reduce_util.h
scripts/package/atvc/: atvc.xml
scripts/package/atvc/scripts/: atvc_common.sh  atvc_custom_install.sh  atvc_custom_uninstall.sh  atvc_install.sh  atvc_uninstall.sh  install.sh  prereq_check.bash  prereq_check.csh  prereq_check.fish  setenv.bash  uninstall.sh  ver_check.sh
scripts/package/common/: _init_.py
scripts/package/common/py/: __init__.py  filelist.py  packer.py  version_info.py
scripts/package/common/sh/: cleanup.sh  common_func_v2.inc  common_interface.csh  common_interface.fish  common_interface.sh  multi_version.inc  version_cfg.inc
scripts/package/latest_manager/scripts/: manager_func.sh
scripts/package/module/ascend/: EngineeringCommon.xml
scripts/package/scripts/: atvc_custom_create_softlink.sh  atvc_custom_install.sh  atvc_custom_remove_softlink.sh  atvc_custom_uninstall.sh  atvc_func.sh  help.info  install.sh  prereq_check.bash  prereq_check.csh  prereq_check.fish  run_atvc_install.sh  run_atvc_uninstall.sh  run_atvc_upgrade.sh  setenv.bash  setenv.csh  setenv.fish  uninstall.sh  ver_check.sh
test/ut/: CMakeLists.txt  main_global.cpp
test/ut/block/: test_add.cpp  test_add_with_broadcast.cpp  test_addcmul.cpp  test_broadcast_to.cpp  test_reduce_sum.cpp  test_relu_with_reduce_sum.cpp
test/ut/common/: k3_pvwrap.h  platform_stub.cpp
test/ut/scripts/: generate_cpp_cov.sh
test/ut/tiling/: test_atvc_tiling.cpp
